# cringebot

./: pyproject.toml
cringebot/: bot.py
