[tool.poetry]
name = "cringebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
"discord.py" = "^1.6.0"
requests = "^2.25.1"
discord-py-slash-command = {git = "https://github.com/eunwoo1104/discord-py-slash-command"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cringebot = "cringebot:main"
